# gopostal

./: .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  WORKSPACE  extensions.bzl  repositories.bzl
expand/: BUILD.bazel  build_darwin.go  build_linux.go  expand.go  expand_test.go
parser/: BUILD.bazel  build_darwin.go  build_linux.go  parser.go  parser_test.go
scripts/: setup
