load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "expand",
    srcs = [
        "build_darwin.go",
        "build_linux.go",
        "expand.go",
    ],
    cdeps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//vendor:libpostal_linux_amd64",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//vendor:libpostal_darwin",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//vendor:libpostal_darwin",
        ],
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "//vendor:libpostal_linux_amd64",
        ],
        "@io_bazel_rules_go//go/platform:linux_arm64": [
            "//vendor:libpostal_linux_arm64",
        ],
        "//conditions:default": [],
    }),
    cgo = True,
    # keep
    clinkopts = [],
    # keep
    copts = [],
    data = ["@libpostal_data_files//:data_files"],
    importpath = "github.com/opendoor-labs/gopostal/expand",
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//go/tools/bazel"],
)

go_test(
    name = "expand_test",
    srcs = ["expand_test.go"],
    embed = [":expand"],
)
