load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "build_darwin.go",
        "parser.go",
    ],
    cdeps = select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "//build/darwin:libpostal",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//build/darwin:libpostal",
        ],
        "//conditions:default": [],
    }),
    cgo = True,
    clinkopts = select({
        "@io_bazel_rules_go//go/platform:darwin": [
            "build/darwin/libpostal.a",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "build/darwin/libpostal.a",
        ],
        "//conditions:default": [],
    }),
    data = ["@libpostal_data_files//:data_files"],
    importpath = "github.com/openvenues/gopostal/parser",
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//go/tools/bazel:go_default_library"],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
)
