load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = [
        "build_darwin.go",
        "build_linux.go",
        "parser.go",
    ],
    cdeps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//vendor:libpostal_linux",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "//vendor:libpostal_darwin",
        ],
        "@io_bazel_rules_go//go/platform:darwin_arm64": [
            "//vendor:libpostal_darwin_aarch64",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//vendor:libpostal_darwin",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//vendor:libpostal_linux",
        ],
        "//conditions:default": [],
    }),
    cgo = True,
    # keep
    clinkopts = [],
    # keep
    copts = [],
    data = ["@libpostal_data_files//:data_files"],
    importpath = "github.com/opendoor-labs/gopostal/parser",
    visibility = ["//visibility:public"],
    deps = ["@io_bazel_rules_go//go/tools/bazel"],
)

go_test(
    name = "parser_test",
    srcs = ["parser_test.go"],
    embed = [":parser"],
)
